Factored out MorphTable0